--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@ body {
   color: #fff;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 .container {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.ticTacBoard{
   width: 600px;
   height: 600px;
   margin: 50px auto;
