--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body {
   text-align: center;
 }
 
+.scoreBoard {
+  width: 600px;
+  height: 100px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .score {
   display: inline-block;
 }
